<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".VowelsRomanToDevanagariActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvDisplayChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="अ" />

        <TextView
            android:id="@+id/tvRemaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remaining"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvErrors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errors"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnA"
            style="@style/btnCharDevanagari"
            android:text="@string/अ" />

        <Button
            android:id="@+id/btnI"
            style="@style/btnCharDevanagari"
            android:text="@string/इ" />

        <Button
            android:id="@+id/btnU"
            style="@style/btnCharDevanagari"
            android:text="@string/उ" />

    </LinearLayout>

    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnAA"
            style="@style/btnCharDevanagari"
            android:text="@string/आ" />

        <Button
            android:id="@+id/btnII"
            style="@style/btnCharDevanagari"
            android:text="@string/ई" />

        <Button
            android:id="@+id/btnUU"
            style="@style/btnCharDevanagari"
            android:text="@string/ऊ" />

    </LinearLayout>

    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnRRetro"
            style="@style/btnCharDevanagari"
            android:text="@string/ऋ" />

        <Button
            android:id="@+id/btnLRetro"
            style="@style/btnCharDevanagari"
            android:text="@string/ऌ" />

    </LinearLayout>

    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnRRRetro"
            style="@style/btnCharDevanagari"
            android:text="@string/ॠ" />

        <Button
            android:id="@+id/btnLLRetro"
            style="@style/btnCharDevanagari"
            android:text="@string/ॡ" />

    </LinearLayout>

    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnE"
            style="@style/btnCharDevanagari"
            android:text="@string/ए" />

        <Button
            android:id="@+id/btnO"
            style="@style/btnCharDevanagari"
            android:text="@string/ओ" />

    </LinearLayout>

    <LinearLayout style="@style/btnRow">

        <Button
            android:id="@+id/btnAI"
            style="@style/btnCharDevanagari"
            android:text="@string/ऐ" />

        <Button
            android:id="@+id/btnAU"
            style="@style/btnCharDevanagari"
            android:text="@string/औ" />

    </LinearLayout>

</LinearLayout>